--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,16 @@ name = "bruise-onion"
 version = "0.1.0"
 edition = "2021"
 
+[[bin]]
+name = "server"
+path = "src/server.rs"
+
+[[bin]]
+name = "client"
+path = "src/client.rs"
+
 [dependencies]
 rsa = "0.9.6"
 rand = "0.8.5"
+
+tokio = { version = "1", features = ["full"] }
