--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,8 @@ name = "client"
 path = "src/client.rs"
 
 [dependencies]
-rsa = "0.9.6"
+rsa = { version = "0.9.6", features = ["sha2"] }
 rand = "0.8.5"
+bincode = "1.3"
 
 tokio = { version = "1", features = ["full"] }
