--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,8 +15,9 @@ path = "src/client.rs"
 rsa = { version = "0.9.6", features = ["sha2"] }
 rand = "0.8.5"
 bincode = "1.3"
-aes-gcm = { version = "0.9", features = ["std"] }
+aes-gcm = { version = "0.10.3", features = ["std"] }
 base64 = "0.21"
 generic-array = "0.14"
+sha2 = "0.10.8"
 
 tokio = { version = "1", features = ["full"] }
