created a new file to generate server keys, have not tested the whole program yet

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,10 @@ path = "src/server.rs"
 name = "client"
 path = "src/client.rs"
 
+[[bin]]
+name = "server_key_gen"
+path = "src/server_key_gen.rs"
+
 [dependencies]
 rsa = { version = "0.9.6", features = ["sha2"] }
 rand = "0.8.5"
