progress on making it modular, fixed dependency issues... :/

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,10 @@ name = "bruise_onion"
 version = "0.1.0"
 edition = "2021"
 
+[lib]
+name = "bruise_onion"
+path = "src/lib.rs"
+
 [[bin]]
 name = "server"
 path = "src/server.rs"
