--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,5 +27,8 @@ aes-gcm = { version = "0.10.3", features = ["std"] }
 base64 = "0.21"
 generic-array = "0.14"
 sha2 = "0.10.8"
+chrono = "0.4"
+log = "0.4"
+env_logger = "0.10"
 
 tokio = { version = "1", features = ["full"] }
