--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,15 +20,17 @@ name = "server_key_gen"
 path = "src/server_key_gen.rs"
 
 [dependencies]
-rsa = { version = "0.9.6", features = ["sha2"] }
-rand = "0.8.5"
+rand_core = "0.6.4"
+rand = "0.8"
 bincode = "1.3"
-aes-gcm = { version = "0.10.3", features = ["std"] }
+#aes-gcm = { version = "0.10.3", features = ["std"] }
 base64 = "0.21"
 generic-array = "0.14"
 sha2 = "0.10.8"
 chrono = "0.4"
 log = "0.4"
+hex = "0.4" 
 env_logger = "0.10"
-
+ed25519-dalek = "1.0"
+x25519-dalek = "2.0.0-rc.3"
 tokio = { version = "1", features = ["full"] }
